--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>卓報告ジェネレーター (最終完成版 v11)</title>
+  <title>卓報告ジェネレーター</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -30,7 +30,6 @@
     <div class="lg:w-1/2 p-6 lg:p-8 space-y-6 overflow-y-auto">
       <header class="mb-6">
         <h1 class="text-2xl font-bold text-gray-900">卓報告フォーマットジェネレーター</h1>
-        <p class="text-sm text-gray-600 mt-1">入力内容を保持しつつ、多彩な表現が可能です。</p>
       </header>
 
       <div class="space-y-6">
