--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="mt-4">
                 <h4 class="font-semibold text-gray-700 mb-2">更新履歴</h4>
                 <ul class="list-disc list-inside space-y-1">
-                    <li>2024/06/25: 公開、作者名爛追加、KPCモード追加</li>
+                    <li>2025/06/25: 公開、作者名欄追加、KPCモード追加</li>
                 </ul>
             </div>
         </div>
