--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
                 <label class="option-label p-2 border rounded-lg cursor-pointer hover:bg-gray-100 block"><input type="radio" name="scenarioFrame" value="o○o" class="hidden">o○o</label>
                 <label class="option-label p-2 border rounded-lg cursor-pointer hover:bg-gray-100 block"><input type="radio" name="scenarioFrame" value="⌒⌒" class="hidden">⌒⌒</label>
                 <label class="option-label p-2 border rounded-lg cursor-pointer hover:bg-gray-100 block"><input type="radio" name="scenarioFrame" value="ଘ♡ଓ" class="hidden">ଘ♡ଓ</label>
+                <label class="option-label p-2 border rounded-lg cursor-pointer hover:bg-gray-100 block"><input type="radio" name="scenarioFrame" value="✾✿" class="hidden">✾✿</label>
+                <label class="option-label p-2 border rounded-lg cursor-pointer hover:bg-gray-100 block"><input type="radio" name="scenarioFrame" value="❖" class="hidden">❖</label>
+                <label class="option-label p-2 border rounded-lg cursor-pointer hover:bg-gray-100 block"><input type="radio" name="scenarioFrame" value="☽☾" class="hidden">☽☾</label>
+                <label class="option-label p-2 border rounded-lg cursor-pointer hover:bg-gray-100 block"><input type="radio" name="scenarioFrame" value="♢♢" class="hidden">♢♢</label>
+                <label class="option-label p-2 border rounded-lg cursor-pointer hover:bg-gray-100 block"><input type="radio" name="scenarioFrame" value="✶✶" class="hidden">✶✶</label>
             </div>
           </div>
         </div>
@@ -226,7 +231,8 @@
             <div class="mt-4">
                 <h4 class="font-semibold text-gray-700 mb-2">更新履歴</h4>
                 <ul class="list-disc list-inside space-y-1">
-                    <li>2025/06/25: KPC表記をKPC/KP表記に変更、日付を追加</li>                  
+                    <li>2025/11/11: PL人数上限を撤廃し、シナリオ飾り枠を追加</li>
+                    <li>2025/06/25: KPC表記をKPC/KP表記に変更、日付を追加</li>
                     <li>2025/06/25: 公開、作者名欄追加、KPCモード追加</li>
                 </ul>
             </div>
@@ -342,14 +348,12 @@
 
       function addPlayer(e) {
         e.preventDefault();
-        if (playerCount < 8) {
-          const currentData = getPlayerData();
-          playerCount++;
-          const newPlayerHTML = createPlayerHTML(playerCount);
-          playersDiv.insertAdjacentHTML('beforeend', newPlayerHTML);
-          reapplyPlayerData(currentData);
-          updatePlayerFieldsVisibility();
-        }
+        const currentData = getPlayerData();
+        playerCount++;
+        const newPlayerHTML = createPlayerHTML(playerCount);
+        playersDiv.insertAdjacentHTML('beforeend', newPlayerHTML);
+        reapplyPlayerData(currentData);
+        updatePlayerFieldsVisibility();
       }
 
       function removePlayer(e) {
@@ -579,7 +583,12 @@
           '☆★': `☆.｡:･★.｡:*･☆.｡:*･\n  ${content}\n｡:*･★.｡:*･☆.｡☆.｡`,
           'o○o': `o○o。.。o○o。.。o○o\n  ${content}\n  o○o。.。o○o。.。o○o`,
           '⌒⌒': `⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒\n  ${content}\n⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒`,
-          'ଘ♡ଓ': `ଘ♡ଓ*:゚+｡.໒꒱°*ଘ♡ଓ\n  ${content}\nଘ♡ଓ*:゚+｡.໒꒱°*ଘ♡ଓ`
+          'ଘ♡ଓ': `ଘ♡ଓ*:゚+｡.໒꒱°*ଘ♡ଓ\n  ${content}\nଘ♡ଓ*:゚+｡.໒꒱°*ଘ♡ଓ`,
+          '✾✿': `✾✿✾✿✾✿✾✿✾✿\n  ${content}\n✿✾✿✾✿✾✿✾✿✾`,
+          '❖': `❖❖❖❖❖❖❖❖❖❖\n  ${content}\n❖❖❖❖❖❖❖❖❖❖`,
+          '☽☾': `☽☾☽☾☽☾☽☾☽☾\n  ${content}\n☾☽☾☽☾☽☾☽☾☽`,
+          '♢♢': `♢♢♢♢♢♢♢♢♢♢\n  ${content}\n♢♢♢♢♢♢♢♢♢♢`,
+          '✶✶': `✶✶✶✶✶✶✶✶✶✶\n  ${content}\n✶✶✶✶✶✶✶✶✶✶`
         };
         const key = Object.keys(frames).find(k => k.includes(frameValue)) || frameValue;
         return frames[key] || content;
